Some changes in index

--- a/index.html
+++ b/index.html
@@ -21,4 +21,4 @@
 <!-- inserting these scripts at the end to be able to use all the elements in the DOM -->
 <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
 
-<script src="js/app.js"></script>
+<script src="Django/shazam/static/shazam/app.js"></script>
